# stringle

./: Cargo.toml  README.md
data/: names_short.txt
src/: app.rs  data.rs  device.rs  error.rs  main.rs  mlp.rs  neural_net.rs  options.rs
src/app/: app.rs  device.rs  message.rs  mod.rs  options.rs
src/models/: data.rs  mlp.rs  mod.rs  model.rs  neural_net.rs
src/ui/: colors.rs  generate_popup.rs  generate_screen.rs  logo.rs  main_screen.rs  mod.rs
