[package]
name = "vibe_str"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["metal"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["metal"] }
crossterm = "0.29.0"
rand = "0.9.2"
ratatui = "0.30.0-alpha.5"
